--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -222,7 +222,7 @@
                }
 
                if(mail.length<5){
-                document.getElementById('emailId').innerHTML = " * invalid email *";
+                document.getElementById('emailId').innerHTML = " * invalid username *";
                 return false;
                }
                else{
