--- a/src/views/addauthor.ejs
+++ b/src/views/addauthor.ejs
@@ -35,7 +35,7 @@
           border: 2px solid rgb(43, 133, 8);
           background: rgb(167, 12, 89);
           height: 22em;
-          width: 300px;
+          width: 310px;
           margin-top: 10%;
           margin-right:10%;
           margin-left:50%;
@@ -133,9 +133,9 @@
             <div class="forms">
                 <form method= "GET" action="/addmin/add">
                     <div class="author">
-                     <label for="author">Author:</label>
+                     <label for="author">Author:</label><br>
                       <input type="text" name="author" required><br><br>
-                      <label for="description">Description:</label>
+                      <label for="description">Description:</label><br>
                       <input type="text" name="desc" required><br><br>
                       <label for="image">Image:</label>
                       <input type="file" name="image" required><br>
