--- a/src/views/addbook.ejs
+++ b/src/views/addbook.ejs
@@ -35,7 +35,7 @@
           border: 2px solid rgb(43, 133, 8);
           background: rgb(167, 12, 89);
           height: 27em;
-          width: 280px;
+          width: 310px;
           margin-top: 10%;
           margin-right:10%;
           margin-left:50%;
@@ -132,11 +132,11 @@
             <div class="forms">
                 <form method= "GET" action="/admin/add">
                     <div class="book">
-                     <label for="title">Title:</label>
+                     <label for="title">Title:</label><br>
                       <input type="text" name="title" required><br><br>
-                      <label for="author">Author:</label>
+                      <label for="author">Author:</label><br>
                       <input type="text" name="author" required><br><br>
-                      <label for="genre">Genre:</label>
+                      <label for="genre">Genre:</label><br>
                       <input type="text" name="genre" required><br><br>
                       <label for="image">Image:</label>
                       <input type="file" name="image" required><br>
