--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -24,7 +24,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     width: 330px;
-    height: 23em;
+    height: 24em;
     max-width: 100%;
     margin-left:10%;
 }
@@ -33,7 +33,7 @@
   color:rgb(133, 160, 127);
   border: 2px solid rgb(8, 10, 94);
   background: rgb(80, 8, 56);
-  height: 19em;
+  height: 20em;
   margin-top: 10%;
   margin-right:10%;
   margin-left:50%;
@@ -137,12 +137,12 @@
             <div class="forms">
                 <form method= "GET" action="" class="login" onsubmit="return validation()">
                     <div class="">
-                      <label>Username</label><br>
+                      <label>Username:</label><br>
                       <input type="text" id="email" placeholder=" enter your username"><br>
                       <span id="emailId"></span><br>
                   </div><br>
                   <div class="">
-                    <label>Password</label><br>
+                    <label>Password:</label><br>
                     <input type="text" id="pass" placeholder="enter your password"><br>
                     <span id="password"></span>
                 </div><br><br>
